# study_buddy

./: README.md  pyproject.toml
output/: flashcards.json
src/studdybuddy/: api.py  chat.py  crew.py  flashcards.py  main.py  search.py  streamlit_app.py
src/studdybuddy/config/: agents.yaml  tasks.yaml
src/studdybuddy/static/: index.html
