[project]
name = "studdybuddy"
version = "0.1.0"
description = "studdybuddy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "fastapi>=0.136.1",
    "streamlit>=1.40.0",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
studdybuddy = "studdybuddy.main:run"
run_crew = "studdybuddy.main:run"
train = "studdybuddy.main:train"
replay = "studdybuddy.main:replay"
test = "studdybuddy.main:test"
run_with_trigger = "studdybuddy.main:run_with_trigger"
chat = "studdybuddy.streamlit_app:run"
api = "studdybuddy.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
